--- a/XQL_Query_API_.ipynb
+++ b/XQL_Query_API_.ipynb
@@ -170,7 +170,7 @@
     "# XQL Query CELL\n",
     "# ===========================================================\n",
     "xql = \"\"\"\n",
-    "#<Your XQL Query>\n",
+    "#Your XQL Query#\n",
     "\"\"\"\n",
     "df, _ = run_xql_auto_download(xql)\n",
     "print(f\"Total rows returned (auto): {len(df)}\")\n",
