Update comment in config cell for clarity

--- a/XQL_Query_API_.ipynb
+++ b/XQL_Query_API_.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 2: config - Edit the Values\n",
+    "# Config - Edit the Values\n",
     "import time\n",
     "import json\n",
     "import requests\n",
